Add supplementary material and multiple cycles with issues.

--- a/_posts/2012-11-17-azmandian12.md
+++ b/_posts/2012-11-17-azmandian12.md
@@ -19,7 +19,8 @@ tex_title: Local Kernel Density Ratio-Based Feature Selection for Outlier Detect
 firstpage: 49
 lastpage: 64
 page: 49-64
-sections: 
+order: 49
+cycles: false
 author:
 - given: F.
   family: Azmandian
