--- a/_posts/2012-11-17-chiang12.md
+++ b/_posts/2012-11-17-chiang12.md
@@ -21,7 +21,8 @@ tex_title: A Ranking-based KNN Approach for Multi-Label Classification
 firstpage: 81
 lastpage: 96
 page: 81-96
-sections: 
+order: 81
+cycles: false
 author:
 - given: T.-H.
   family: Chiang
