--- a/_posts/2012-11-17-demyanov12.md
+++ b/_posts/2012-11-17-demyanov12.md
@@ -19,7 +19,8 @@ tex_title: AIC and BIC based approaches for SVM parameter value estimation with 
 firstpage: 97
 lastpage: 112
 page: 97-112
-sections: 
+order: 97
+cycles: false
 author:
 - given: S.
   family: Demyanov
