--- a/_posts/2012-11-17-fan12.md
+++ b/_posts/2012-11-17-fan12.md
@@ -25,7 +25,8 @@ tex_title: Online Learning of a Dirichlet Process Mixture of Generalized Dirichl
 firstpage: 113
 lastpage: 128
 page: 113-128
-sections: 
+order: 113
+cycles: false
 author:
 - given: W.
   family: Fan
