--- a/_posts/2012-11-17-feraud12.md
+++ b/_posts/2012-11-17-feraud12.md
@@ -18,7 +18,8 @@ tex_title: A stochastic bandit algorithm for scratch games
 firstpage: 129
 lastpage: 143
 page: 129-143
-sections: 
+order: 129
+cycles: false
 author:
 - given: R.
   family: Féraud
