--- a/_posts/2012-11-17-hoi12.md
+++ b/_posts/2012-11-17-hoi12.md
@@ -12,7 +12,8 @@ tex_title: Preface
 firstpage: i
 lastpage: xvii
 page: i-xvii
-sections: 
+order: 0
+cycles: false
 author:
 - given: Steven C.H.
   family: Hoi
