--- a/_posts/2012-11-17-kawajiri12.md
+++ b/_posts/2012-11-17-kawajiri12.md
@@ -29,7 +29,8 @@ tex_title: Frustratingly Simplified Deployment in WLAN Localization by Learning 
 firstpage: 191
 lastpage: 204
 page: 191-204
-sections: 
+order: 191
+cycles: false
 author:
 - given: R.
   family: Kawajiri
