--- a/_posts/2012-11-17-klami12.md
+++ b/_posts/2012-11-17-klami12.md
@@ -19,7 +19,8 @@ tex_title: Variational Bayesian Matching
 firstpage: 205
 lastpage: 220
 page: 205-220
-sections: 
+order: 205
+cycles: false
 author:
 - given: A.
   family: Klami
