--- a/_posts/2012-11-17-li12.md
+++ b/_posts/2012-11-17-li12.md
@@ -20,7 +20,8 @@ tex_title: Active Learning with Hinted Support Vector Machine
 firstpage: 221
 lastpage: 235
 page: 221-235
-sections: 
+order: 221
+cycles: false
 author:
 - given: C.-L.
   family: Li
