--- a/_posts/2012-11-17-liu12a.md
+++ b/_posts/2012-11-17-liu12a.md
@@ -20,7 +20,8 @@ tex_title: A Convex-Concave Relaxation Procedure Based Subgraph Matching Algorit
 firstpage: 237
 lastpage: 252
 page: 237-252
-sections: 
+order: 237
+cycles: false
 author:
 - given: Z.-Y.
   family: Liu
