--- a/_posts/2012-11-17-madani12.md
+++ b/_posts/2012-11-17-madani12.md
@@ -24,7 +24,8 @@ tex_title: On Using Nearly-Independent Feature Families for High Precision and C
 firstpage: 269
 lastpage: 284
 page: 269-284
-sections: 
+order: 269
+cycles: false
 author:
 - given: O.
   family: Madani
