--- a/_posts/2012-11-17-mao12.md
+++ b/_posts/2012-11-17-mao12.md
@@ -19,7 +19,8 @@ tex_title: Learning and Model-Checking Networks of I/O Automata
 firstpage: 285
 lastpage: 300
 page: 285-300
-sections: 
+order: 285
+cycles: false
 author:
 - given: H.
   family: Mao
