--- a/_posts/2012-11-17-navaroli12.md
+++ b/_posts/2012-11-17-navaroli12.md
@@ -19,7 +19,8 @@ tex_title: Statistical Models for Exploring Individual Email Communication Behav
 firstpage: 317
 lastpage: 332
 page: 317-332
-sections: 
+order: 317
+cycles: false
 author:
 - given: N.
   family: Navaroli
