--- a/_posts/2012-11-17-neven12.md
+++ b/_posts/2012-11-17-neven12.md
@@ -22,7 +22,8 @@ tex_title: 'QBoost: Large Scale Classifier Training withAdiabatic Quantum Optimi
 firstpage: 333
 lastpage: 348
 page: 333-348
-sections: 
+order: 333
+cycles: false
 author:
 - given: H.
   family: Neven
