--- a/_posts/2012-11-17-sasaki12.md
+++ b/_posts/2012-11-17-sasaki12.md
@@ -22,7 +22,8 @@ tex_title: Topographic Analysis of Correlated Components
 firstpage: 365
 lastpage: 378
 page: 365-378
-sections: 
+order: 365
+cycles: false
 author:
 - given: H.
   family: Sasaki
