--- a/_posts/2012-11-17-shariat12.md
+++ b/_posts/2012-11-17-shariat12.md
@@ -20,7 +20,8 @@ tex_title: Improved sequence classification using adaptive segmental sequence al
 firstpage: 379
 lastpage: 394
 page: 379-394
-sections: 
+order: 379
+cycles: false
 author:
 - given: S.
   family: Shariat
