--- a/_posts/2012-11-17-than12.md
+++ b/_posts/2012-11-17-than12.md
@@ -20,7 +20,8 @@ tex_title: Supervised dimension reduction with topic models
 firstpage: 395
 lastpage: 410
 page: 395-410
-sections: 
+order: 395
+cycles: false
 author:
 - given: K.
   family: Than
