--- a/_posts/2012-11-17-tran12a.md
+++ b/_posts/2012-11-17-tran12a.md
@@ -18,7 +18,8 @@ tex_title: Cumulative Restricted Boltzmann Machines for Ordinal Matrix Data Anal
 firstpage: 411
 lastpage: 426
 page: 411-426
-sections: 
+order: 411
+cycles: false
 author:
 - given: T.
   family: Tran
