--- a/_posts/2012-11-17-tran12b.md
+++ b/_posts/2012-11-17-tran12b.md
@@ -21,7 +21,8 @@ tex_title: Learning From Ordered Sets and Applications in Collaborative Ranking
 firstpage: 427
 lastpage: 442
 page: 427-442
-sections: 
+order: 427
+cycles: false
 author:
 - given: T.
   family: Tran
