--- a/_posts/2012-11-17-tran12c.md
+++ b/_posts/2012-11-17-tran12c.md
@@ -22,7 +22,8 @@ tex_title: Two-way Parallel Class Expression Learning
 firstpage: 443
 lastpage: 458
 page: 443-458
-sections: 
+order: 443
+cycles: false
 author:
 - given: A.C.
   family: Tran
