--- a/_posts/2012-11-17-wang12a.md
+++ b/_posts/2012-11-17-wang12a.md
@@ -20,7 +20,8 @@ tex_title: Spatial Locality-Aware Sparse Coding and Dictionary Learning
 firstpage: 491
 lastpage: 505
 page: 491-505
-sections: 
+order: 491
+cycles: false
 author:
 - given: J.
   family: Wang
