--- a/_posts/2012-11-17-yang12.md
+++ b/_posts/2012-11-17-yang12.md
@@ -21,7 +21,8 @@ tex_title: Practical Large Scale Classification with Additive Kernels
 firstpage: 523
 lastpage: 538
 page: 523-538
-sections: 
+order: 523
+cycles: false
 author:
 - given: H.
   family: Yang
