--- a/_posts/2012-11-17-yasutake12.md
+++ b/_posts/2012-11-17-yasutake12.md
@@ -17,7 +17,8 @@ tex_title: Online Rank Aggregation
 firstpage: 539
 lastpage: 553
 page: 539-553
-sections: 
+order: 539
+cycles: false
 author:
 - given: S.
   family: Yasutake
