--- a/_posts/2012-11-17-zhou12.md
+++ b/_posts/2012-11-17-zhou12.md
@@ -21,7 +21,8 @@ tex_title: Multi-view Positive and Unlabeled Learning
 firstpage: 555
 lastpage: 570
 page: 555-570
-sections: 
+order: 555
+cycles: false
 author:
 - given: J.T.
   family: Zhou
