--- a/_posts/2012-11-17-adhikari12.md
+++ b/_posts/2012-11-17-adhikari12.md
@@ -22,7 +22,8 @@ tex_title: Multiresolution Mixture Modeling using Merging of Mixture Components
 firstpage: 17
 lastpage: 32
 page: 17-32
-sections: 
+order: 17
+cycles: false
 author:
 - given: P.R.
   family: Adhikari
