--- a/_posts/2012-11-17-asbeh12.md
+++ b/_posts/2012-11-17-asbeh12.md
@@ -23,7 +23,8 @@ tex_title: Learning Latent Variable Models by Pairwise Cluster Comparison
 firstpage: 33
 lastpage: 48
 page: 33-48
-sections: 
+order: 33
+cycles: false
 author:
 - given: N.
   family: Asbeh
