--- a/_posts/2012-11-17-chatzis12.md
+++ b/_posts/2012-11-17-chatzis12.md
@@ -24,7 +24,8 @@ tex_title: A Coupled Indian Buffet Process Model for Collaborative Filtering
 firstpage: 65
 lastpage: 79
 page: 65-79
-sections: 
+order: 65
+cycles: false
 author:
 - given: S.P.
   family: Chatzis
