--- a/_posts/2012-11-17-gu12.md
+++ b/_posts/2012-11-17-gu12.md
@@ -18,7 +18,8 @@ tex_title: Max-Margin Ratio Machine
 firstpage: 145
 lastpage: 157
 page: 145-157
-sections: 
+order: 145
+cycles: false
 author:
 - given: S.
   family: Gu
