--- a/_posts/2012-11-17-haimovitch12.md
+++ b/_posts/2012-11-17-haimovitch12.md
@@ -15,7 +15,8 @@ tex_title: 'More Is Better: Large Scale Partially-supervised Sentiment Classific
 firstpage: 175
 lastpage: 190
 page: 175-190
-sections: 
+order: 175
+cycles: false
 author:
 - given: Y.
   family: Haimovitch
