--- a/_posts/2012-11-17-liu12b.md
+++ b/_posts/2012-11-17-liu12b.md
@@ -19,7 +19,8 @@ tex_title: Key Instance Detection in Multi-Instance Learning
 firstpage: 253
 lastpage: 268
 page: 253-268
-sections: 
+order: 253
+cycles: false
 author:
 - given: G.
   family: Liu
