--- a/_posts/2012-11-17-nakajima12.md
+++ b/_posts/2012-11-17-nakajima12.md
@@ -19,7 +19,8 @@ tex_title: Sparse Additive Matrix Factorization for Robust PCA and Its Generaliz
 firstpage: 301
 lastpage: 316
 page: 301-316
-sections: 
+order: 301
+cycles: false
 author:
 - given: S.
   family: Nakajima
