--- a/_posts/2012-11-17-vovk12.md
+++ b/_posts/2012-11-17-vovk12.md
@@ -16,7 +16,8 @@ tex_title: Conditional validity of inductive conformal predictors
 firstpage: 475
 lastpage: 490
 page: 475-490
-sections: 
+order: 475
+cycles: false
 author:
 - given: V.
   family: Vovk
