--- a/_posts/2012-11-17-wang12b.md
+++ b/_posts/2012-11-17-wang12b.md
@@ -18,7 +18,8 @@ tex_title: Multi-objective Monte-Carlo Tree Search
 firstpage: 507
 lastpage: 522
 page: 507-522
-sections: 
+order: 507
+cycles: false
 author:
 - given: W.
   family: Wang
